--- a/src/styles/loader.module.scss
+++ b/src/styles/loader.module.scss
@@ -1,42 +1,87 @@
-.lds_facebook {
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	-webkit-transform: translate(-50%, -50%);
-	transform: translate(-50%, -50%);
+.lds_roller {
 	display: inline-block;
-	// position: relative;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 	width: 80px;
 	height: 80px;
 }
-.lds_facebook div {
-	display: inline-block;
+.lds_roller div {
+	animation: lds_roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+	transform-origin: 40px 40px;
+}
+.lds_roller div:after {
+	content: ' ';
+	display: block;
 	position: absolute;
-	left: 8px;
-	width: 16px;
-	background-color: #fcf;
-	animation: lds_facebook 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
+	width: 7px;
+	height: 7px;
+	border-radius: 50%;
+	background: #fff;
+	margin: -4px 0 0 -4px;
 }
-.lds_facebook div:nth-child(1) {
-	left: 8px;
-	animation-delay: -0.24s;
+.lds_roller div:nth-child(1) {
+	animation-delay: -0.036s;
 }
-.lds_facebook div:nth-child(2) {
-	left: 32px;
-	animation-delay: -0.12s;
+.lds_roller div:nth-child(1):after {
+	top: 63px;
+	left: 63px;
 }
-.lds_facebook div:nth-child(3) {
+.lds_roller div:nth-child(2) {
+	animation-delay: -0.072s;
+}
+.lds_roller div:nth-child(2):after {
+	top: 68px;
 	left: 56px;
-	animation-delay: 0;
 }
-@keyframes lds_facebook {
+.lds_roller div:nth-child(3) {
+	animation-delay: -0.108s;
+}
+.lds_roller div:nth-child(3):after {
+	top: 71px;
+	left: 48px;
+}
+.lds_roller div:nth-child(4) {
+	animation-delay: -0.144s;
+}
+.lds_roller div:nth-child(4):after {
+	top: 72px;
+	left: 40px;
+}
+.lds_roller div:nth-child(5) {
+	animation-delay: -0.18s;
+}
+.lds_roller div:nth-child(5):after {
+	top: 71px;
+	left: 32px;
+}
+.lds_roller div:nth-child(6) {
+	animation-delay: -0.216s;
+}
+.lds_roller div:nth-child(6):after {
+	top: 68px;
+	left: 24px;
+}
+.lds_roller div:nth-child(7) {
+	animation-delay: -0.252s;
+}
+.lds_roller div:nth-child(7):after {
+	top: 63px;
+	left: 17px;
+}
+.lds_roller div:nth-child(8) {
+	animation-delay: -0.288s;
+}
+.lds_roller div:nth-child(8):after {
+	top: 56px;
+	left: 12px;
+}
+@keyframes lds_roller {
 	0% {
-		top: 8px;
-		height: 64px;
+		transform: rotate(0deg);
 	}
-	50%,
 	100% {
-		top: 24px;
-		height: 32px;
+		transform: rotate(360deg);
 	}
 }
